crates/sakka-test/tests/trybuild/custom_codec_dupe.stderr
error: codec already specified
 --> tests/trybuild/custom_codec_dupe.rs:8:29
  |
8 |     #[sakka(codec = CodecA, codec = CodecB)]
  |                             ^^^^^
